<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
            android:layout_below="@+id/appbar"
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_layout"
    />
    <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:id="@+id/bottom_layout"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="1">

        <Button android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/bottom_button_text1"/>
        <Button android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/bottom_button_text2"/>
        <Button android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/bottom_button_text3"/>
        <Button android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/bottom_button_text4"/>
        <Button android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/bottom_button_text5"/>
    </LinearLayout>


</RelativeLayout>